--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <html>
 <head>
-	<title>index</title>
+	<title>Página Inicial</title>
+	<meta name="viewport" content="width=device-width initial-scale=1.0"/>
+	<meta charset="UTF-8"/>
 </head>
 <body>
 	
